8178352: BitMap::get_next_zero_offset may give wrong result on Mac

Invert and search initial word for trailing ones.

Reviewed-by: stefank, cjplummer